--- a/about.html
+++ b/about.html
@@ -72,10 +72,10 @@
               <ul class="main-menu nav justify-content-center">
                 <li><a href="index.html">Home</a></li>
                 <li class="active"><a href="about.html">About Us</a></li>
-                <li class="has-submenu"><a href="causes.html">Causes</a>
+                <li class="has-submenu"><a href="projects.html">Projects</a>
                   <ul class="submenu-nav">
-                    <li><a href="causes.html">Causes</a></li>
-                    <li><a href="causes-details.html">Causes Details</a></li>
+                    <li><a href="projects.html">Projects</a></li>
+                    <li><a href="project-details.html">Project Details</a></li>
                   </ul>
                 </li>
                 <li class="has-submenu"><a href="blog.html">Blog</a>
@@ -131,7 +131,7 @@
           <div class="col-lg-9">
             <div class="section-title">
               <h5 class="subtitle line-theme-color">About Us.</h5>
-              <h2 class="title"><span>Givest</span> is The Non Profitable Organization.</h2>
+              <h2 class="title"><span>MR Leos</span> Welcome to the Leo Club of Moratuwa Rathmalana.</h2>
             </div>
           </div>
         </div>
@@ -152,8 +152,9 @@
                   <div class="content-box-item mb-md-30">
                     <h3 class="title">Mission</h3>
                     <img class="img-line-shape" src="assets/img/shape/line-s1.png" alt="Image-Givest">
-                    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry has been the industry's standard dummy text ever since 1500 when unknown printer took a galley of type and scram bled it to make a type specimen book.</p>
-                    <p class="font-family2 mb-0">Lorem Ipsum simply dummy text the printing & typesetting industry been the industry standard dummy make type specimen book.</p>
+                    <p>Empower the youth with self-driven, practical experiences and opportunities to transform their lives and develop
+                    leadership qualities while volunteering in serving the community.</p>
+                    <!-- <p class="font-family2 mb-0">Lorem Ipsum simply dummy text the printing & typesetting industry been the industry standard dummy make type specimen book.</p> -->
                     <img class="bg-line-shape" src="assets/img/shape/line5.png" alt="Image-Givest">
                   </div>
                 </div>
@@ -161,8 +162,8 @@
                   <div class="content-box-item" data-bg-color="#fea444">
                     <h3 class="title">Vission</h3>
                     <img class="img-line-shape" src="assets/img/shape/line-s1.png" alt="Image-Givest">
-                    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry has been the industry's standard dummy text ever since 1500 when unknown printer took a galley of type and scram bled it to make a type specimen book.</p>
-                    <p class="font-family2 mb-0">Lorem Ipsum simply dummy text the printing & typesetting industry been the industry standard dummy make type specimen book.</p>
+                    <p>create a community of global leaders.</p>
+                    <!-- <p class="font-family2 mb-0">Lorem Ipsum simply dummy text the printing & typesetting industry been the industry standard dummy make type specimen book.</p> -->
                     <img class="bg-line-shape" src="assets/img/shape/line5.png" alt="Image-Givest">
                   </div>
                 </div>
