--- a/index.html
+++ b/index.html
@@ -72,10 +72,10 @@
                 <ul class="main-menu nav justify-content-center">
                   <li class="active"><a href="index.html">Home</a></li>
                   <li><a href="about.html">About Us</a></li>
-                  <li class="has-submenu"><a href="causes.html">Causes</a>
+                  <li class="has-submenu"><a href="projects.html">Projects</a>
                     <ul class="submenu-nav">
-                      <li><a href="causes.html">Causes</a></li>
-                      <li><a href="causes-details.html">Causes Details</a></li>
+                      <li><a href="projects.html">Projects</a></li>
+                      <li><a href="project-details.html">Project Details</a></li>
                     </ul>
                   </li>
                   <li class="has-submenu"><a href="blog.html">Blog</a>
@@ -122,16 +122,17 @@
                     <div class="content" data-aos="fade-right" data-aos-duration="1000">
                       <div class="subtitle-content">
                         <img src="assets/img/icons/1.png" alt="Givest-HasTech">
-                        <h6>Change The World.</h6>
+                        <h6>Leading for Life.</h6>
                       </div>
                       <div class="tittle-wrp">
-                        <h2>Need Your Big Hand For <span>Change</span> The World.</h2>
+                        <!-- <h2>Need Your Big Hand For <span>Change</span> The World.</h2> -->
+                        <h2>Welcome to the <span>Leo Club of</span> Moratuwa Rathmalana.</h2>
                       </div>
                       <div class="btn-wrp">
-                        <a href="causes.html" class="btn-theme btn-gradient btn-slide btn-style">All Causes <img
-                            class="icon icon-img" src="assets/img/icons/arrow-line-right2.png" alt="Icon"></a>
-                        <a href="#/" class="btn-theme btn-border btn-black btn-style">Donate Now <img
-                            class="icon icon-img" src="assets/img/icons/arrow-right-line-dark.png" alt="Icon"></a>
+                <a href="volunteer.html" class="btn-theme btn-gradient btn-slide">Join Now <img class="icon icon-img"
+                    src="assets/img/icons/arrow-line-right2.png" alt="Icon"></a>
+                        <!-- <a href="#/" class="btn-theme btn-border btn-black btn-style">Donate Now <img
+                            class="icon icon-img" src="assets/img/icons/arrow-right-line-dark.png" alt="Icon"></a> -->
                       </div>
                     </div>
                   </div>
@@ -155,13 +156,13 @@
                           <img src="assets/img/shape/1.png" alt="Image-Givest">
                         </span>
                       </div>
-                      <div class="donate-circle-wrp">
-                        <div class="pie-chart-circle" data-size="255" data-line-width="8" data-line-cap="butt"
-                          data-track-color="#ffffff54" data-bar-color="#fff" data-percent="68"></div>
+                      <div class="donate-circle-wrp ">
+                        <!-- <div class="d-flex justify-content-center  pie-chart-circle " data-size="300" data-line-width="8" data-line-cap="butt"
+                          data-track-color="#ffffff54" data-bar-color="#fff" data-percent="68"></div> -->
                         <div class="donate-content">
-                          <div class="raised-amount">$865M</div>
+                          <div class="raised-amount">52 Years of Excellence</div><br>
                           <img class="line-shape-img" src="assets/img/shape/line-s2.png" alt="Image-Givest">
-                          <h5 class="donate-title">Total Raised</h5>
+                          <!-- <h5 class="donate-title">Total Raised</h5> -->
                         </div>
                       </div>
                     </div>
@@ -199,16 +200,22 @@
                   <div class="icon-box">
                     <img class="icon-img" src="assets/img/icons/s1.png" alt="Icon">
                   </div>
-                  <h4 class="title">Clean Water</h4>
+                  <!-- <h4 class="title">Leadership</h4> -->
+                </div>
+                <div class="icon-box-top">
+                  <!-- <div class="icon-box">
+                    <img class="icon-img" src="assets/img/icons/s1.png" alt="Icon">
+                  </div> -->
+                  <h4 class="title">Leadership</h4>
                 </div>
                 <div class="content">
                   <div class="separator-line">
                     <img src="assets/img/shape/line-s1.png" alt="Givest-HasTech">
                   </div>
-                  <p>Lorem Ipsum is simply dummy text the printing typesetng industry lorem Ipsum has been industry
-                    standard dummy text ever since.</p>
-                  <a href="causes-details.html" class="btn-theme btn-white btn-border btn-size-md">View Details <img
-                      class="icon icon-img" src="assets/img/icons/arrow-line-right.png" alt="Icon"></a>
+                  <p>Leo members acquire skills as project organizers and motivators of their
+                  peers.</p>
+                  <!-- <a href="causes-details.html" class="btn-theme btn-white btn-border btn-size-md">View Details <img
+                      class="icon icon-img" src="assets/img/icons/arrow-line-right.png" alt="Icon"></a> -->
                 </div>
               </div>
             </div>
@@ -218,16 +225,23 @@
                   <div class="icon-box">
                     <img class="icon-img" src="assets/img/icons/s2.png" alt="Icon">
                   </div>
-                  <h4 class="title">Healthy Food</h4>
+                  <!-- <h4 class="title">Experience</h4> -->
+                </div>
+                <div class="icon-box-top">
+                  <!-- <div class="icon-box">
+                    <img class="icon-img" src="assets/img/icons/s2.png" alt="Icon">
+                  </div> -->
+                  <h4 class="title">Experience</h4>
                 </div>
                 <div class="content">
                   <div class="separator-line">
                     <img src="assets/img/shape/line-s1.png" alt="Givest-HasTech">
                   </div>
-                  <p>Lorem Ipsum is simply dummy text the printing typesetng industry lorem Ipsum has been industry
-                    standard dummy text ever since.</p>
-                  <a href="causes-details.html" class="btn-theme btn-white btn-border btn-size-md">View Details <img
-                      class="icon icon-img" src="assets/img/icons/arrow-line-right.png" alt="Icon"></a>
+                  <p>They discover how teamwork
+                  and cooperation can bring about change in
+                  their community and the world.</p>
+                  <!-- <a href="causes-details.html" class="btn-theme btn-white btn-border btn-size-md">View Details <img
+                      class="icon icon-img" src="assets/img/icons/arrow-line-right.png" alt="Icon"></a> -->
                 </div>
               </div>
             </div>
@@ -237,16 +251,23 @@
                   <div class="icon-box">
                     <img class="icon-img" src="assets/img/icons/s3.png" alt="Icon">
                   </div>
-                  <h4 class="title">Medical Help</h4>
+                  <!-- <h4 class="title">Opportunities</h4> -->
+                </div>
+                <div class="icon-box-top">
+                  <!-- <div class="icon-box">
+                    <img class="icon-img" src="assets/img/icons/s3.png" alt="Icon">
+                  </div> -->
+                  <h4 class="title">Opportunities</h4>
                 </div>
                 <div class="content">
                   <div class="separator-line">
                     <img src="assets/img/shape/line-s1.png" alt="Givest-HasTech">
                   </div>
-                  <p>Lorem Ipsum is simply dummy text the printing typesetng industry lorem Ipsum has been industry
-                    standard dummy text ever since.</p>
-                  <a href="causes-details.html" class="btn-theme btn-white btn-border btn-size-md">View Details <img
-                      class="icon icon-img" src="assets/img/icons/arrow-line-right.png" alt="Icon"></a>
+                  <p>: Leos develop positive
+                  character traits and receive recognition
+                  for their contributions.</p>
+                  <!-- <a href="causes-details.html" class="btn-theme btn-white btn-border btn-size-md">View Details <img
+                      class="icon icon-img" src="assets/img/icons/arrow-line-right.png" alt="Icon"></a> -->
                 </div>
               </div>
             </div>
@@ -262,7 +283,7 @@
             <div class="col-lg-9">
               <div class="section-title position-relative z-index-1" data-aos="fade-up" data-aos-duration="1000">
                 <h5 class="subtitle line-theme-color">About Us.</h5>
-                <h2 class="title"><span>Givest</span> is The Non Profitable Organization.</h2>
+                <h2 class="title"><span>MR Leos</span> Welcome to the Leo Club of Moratuwa Rathmalana.</h2>
               </div>
             </div>
           </div>
@@ -325,56 +346,66 @@
       </section>
       <!--== End Causes Area ==-->
 
-      <!--== Start Donate Area ==-->
-      <section class="donate-area donate-default-area bgcolor-theme3">
+      <!--== Start Testimonial Area ==-->
+      <section class="testimonial-area testimonial-default-area bgcolor-theme3">
         <div class="container">
           <div class="row">
-            <div class="col-lg-7 col-xxl-7">
-              <div class="content" data-aos="fade-up" data-aos-duration="1000">
+            <div class="col-md-12 col-lg-4 col-xl-5">
+              <div class="title-wrp" data-bg-img="assets/img/testimonial/bg-testi1.jpg">
                 <div class="section-title">
-                  <h5 class="subtitle line-theme-color mb-7">Make A Donation</h5>
-                  <h2 class="title title-style text-white">Need Pure Water For Mozambique People. <img class="img-shape"
+                  <h5 class="subtitle line-white-color text-white mb-7">Recent Events</h5>
+                  <h2 class="title title-style text-white">What People Say About Us. <img class="img-shape"
                       src="assets/img/shape/3.png" alt="Image-Givest"></h2>
-                </div>
-                <div class="donate-form">
-                  <form action="#">
-                    <div class="amount-info">
-                      <div class="donate-amount">$20</div>
-                      <div class="donate-amount">$50</div>
-                      <div class="donate-amount">$200</div>
-                      <div class="donate-amount donate-custom-amount">
-                        <input class="form-control" type="text" placeholder="Custom">
-                      </div>
-                    </div>
-                    <div class="btn-wrp">
-                      <a href="#/" class="btn-theme btn-gradient btn-slide">Donate Now <img class="icon icon-img"
-                          src="assets/img/icons/arrow-line-right2.png" alt="Icon"></a>
-                      <a href="#/" class="btn-theme btn-gradient btn-border">Join Events <img class="icon icon-img"
-                          src="assets/img/icons/arrow-line-right2-gradient.png" alt="Icon"></a>
-                    </div>
-                  </form>
                 </div>
               </div>
             </div>
-            <div class="col-lg-5 col-xxl-4 offset-xxl-1">
-              <div class="donners-content">
-                <div class="thumb-bg-layer" data-aos="fade-left" data-aos-duration="1000"
-                  data-bg-img="assets/img/photos/bg-donate1.jpg"></div>
-                <div class="donners-info" data-aos="fade-up" data-aos-duration="1000">
-                  <h3>Great Donners</h3>
-                  <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry since the 1500s, when an
-                    unknown.</p>
-                  <div class="donners-item">
-                    <div class="donner-item">
-                      <img src="assets/img/photos/donner1.png" alt="Image-Givest">
+            <div class="col-md-12 col-lg-7 col-xl-6">
+              <div class="testimonial-content">
+                <div class="testimonial-slider-content">
+                  <div class="swiper-container testimonial-slider-container">
+                    <div class="swiper-wrapper testimonial-slider">
+                      <div class="swiper-slide testimonial-single">
+                        <div class="client-thumb-wrp">
+                          <div class="client-thumb">
+                            <img src="assets/img/testimonial/1.png" alt="Image-Givest">
+                          </div>
+                          <div class="quote-icon">“</div>
+                        </div>
+                        <div class="client-content">
+                          <p>The leap into electronic typesetting, essentially unchanged was popularised the release Letraset
+                            sheets containing and more recently desktop publishing like Aldus maker including.</p>
+                        </div>
+                        <div class="client-info">
+                          <img class="shape-line-img" src="assets/img/shape/line-t1.png" alt="Image-Givest">
+                          <h4 class="name">Harvey Harrington</h4>
+                          <h6 class="designation">Senior Volunteer</h6>
+                        </div>
+                      </div>
+                      <div class="swiper-slide testimonial-single">
+                        <div class="client-thumb-wrp">
+                          <div class="client-thumb">
+                            <img src="assets/img/testimonial/2.png" alt="Image-Givest">
+                          </div>
+                          <div class="quote-icon">“</div>
+                        </div>
+                        <div class="client-content">
+                          <p>It is long established fact that reader will distract by the readable content a page when looking
+                            atten layout. The point of using and that it has a normal distribution of letters</p>
+                        </div>
+                        <div class="client-info">
+                          <img class="shape-line-img" src="assets/img/shape/line-t1.png" alt="Image-Givest">
+                          <h4 class="name">Julia Steve</h4>
+                          <h6 class="designation">Senior Volunteer</h6>
+                        </div>
+                      </div>
                     </div>
-                    <div class="donner-item">
-                      <img src="assets/img/photos/donner2.png" alt="Image-Givest">
+                    <!-- Add Arrows -->
+                    <div class="navigation-wrp">
+                      <div class="swiper-button-prev"><img class="icon-img" src="assets/img/icons/test-arrow-left.png"
+                          alt="Image-Icon"></div>
+                      <div class="swiper-button-next"><img class="icon-img" src="assets/img/icons/test-arrow-right.png"
+                          alt="Image-Icon"></div>
                     </div>
-                    <div class="donner-item">
-                      <img src="assets/img/photos/donner3.png" alt="Image-Givest">
-                    </div>
-                    <div class="donner-item donner-number">+286</div>
                   </div>
                 </div>
               </div>
@@ -382,7 +413,7 @@
           </div>
         </div>
       </section>
-      <!--== End Donate Area ==-->
+      <!--== End Testimonial Area ==-->
 
       <!--== Start Funfact Area ==-->
       <section class="funfact-area funfact-default-area">
