pages intial setup v2

--- a/blog.html
+++ b/blog.html
@@ -72,22 +72,22 @@
               <ul class="main-menu nav justify-content-center">
                 <li><a href="index.html">Home</a></li>
                 <li><a href="about.html">About Us</a></li>
-                <li class="has-submenu"><a href="causes.html">Causes</a>
+                <li class="has-submenu"><a href="projects.html">Projects</a>
                   <ul class="submenu-nav">
-                    <li><a href="causes.html">Causes</a></li>
-                    <li><a href="causes-details.html">Causes Details</a></li>
+                    <li><a href="projects.html">Projects</a></li>
+                    <li><a href="project-details.html">Project Details</a></li>
                   </ul>
                 </li>
                 <li class="has-submenu active"><a href="blog.html">Blog</a>
                   <ul class="submenu-nav">
-                    <li><a class="text-theme-color" href="blog.html">Blog Grid</a></li>
+                    <li><a href="blog.html">Blog Grid</a></li>
                     <li><a href="blog-details.html">Blog Single</a></li>
                   </ul>
                 </li>
-                <li class="has-submenu"><a href="index.html">Pages</a>
+                <li class="has-submenu"><a href="committee.html">Committee</a>
                   <ul class="submenu-nav">
                     <li><a href="event-details.html">Event Details</a></li>
-                    <li><a href="volunteer.html">Volunteer</a></li>
+                    <li><a href="committee.html">Committee</a></li>
                   </ul>
                 </li>
                 <li><a href="contact.html">Contact Us</a></li>
@@ -99,7 +99,8 @@
                 <span></span>
                 <span></span>
               </button>
-              <a href="contact.html" class="btn-theme btn-gradient btn-slide btn-style">Give Support <img class="icon icon-img" src="assets/img/icons/arrow-line-right2.png" alt="Icon"></a>
+              <a href="application.html" class="btn-theme btn-gradient btn-slide">Join Now <img class="icon icon-img"
+                  src="assets/img/icons/arrow-line-right2.png" alt="Icon"></a>
             </div>
           </div>
         </div>
