--- a/blog-details.html
+++ b/blog-details.html
@@ -71,23 +71,23 @@
               <div class="header-navigation-area">
                 <ul class="main-menu nav justify-content-center">
                   <li><a href="index.html">Home</a></li>
-                  <li><a href="about.html">About Us</a></li>
-                  <li class="has-submenu"><a href="causes.html">Causes</a>
+                  <li class="active"><a href="about.html">About Us</a></li>
+                  <li class="has-submenu"><a href="projects.html">Projects</a>
                     <ul class="submenu-nav">
-                      <li><a href="causes.html">Causes</a></li>
-                      <li><a href="causes-details.html">Causes Details</a></li>
+                      <li><a href="projects.html">Projects</a></li>
+                      <li><a href="project-details.html">Project Details</a></li>
                     </ul>
                   </li>
-                  <li class="has-submenu active"><a href="blog.html">Blog</a>
+                  <li class="has-submenu"><a href="blog.html">Blog</a>
                     <ul class="submenu-nav">
                       <li><a href="blog.html">Blog Grid</a></li>
-                      <li><a class="text-theme-color" href="blog-details.html">Blog Single</a></li>
+                      <li><a href="blog-details.html">Blog Single</a></li>
                     </ul>
                   </li>
-                  <li class="has-submenu"><a href="index.html">Pages</a>
+                  <li class="has-submenu"><a href="committee.html">Committee</a>
                     <ul class="submenu-nav">
                       <li><a href="event-details.html">Event Details</a></li>
-                      <li><a href="volunteer.html">Volunteer</a></li>
+                      <li><a href="committee.html">Committee</a></li>
                     </ul>
                   </li>
                   <li><a href="contact.html">Contact Us</a></li>
@@ -144,8 +144,9 @@
                               src="assets/img/icons/admin1.png" alt="Icon-Image"></span>By: Marinda Roderick</a>
                       </div>
                       <h2 class="title" id="blog-title">Children Education Needs For Change The World.</h2>
-                      
-                      <p class="mb-0" id="blog-description">Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in
+
+                      <p class="mb-0" id="blog-description">Contrary to popular belief, Lorem Ipsum is not simply random
+                        text. It has roots in
                         a piece of classical literature from 459, making it over 2000 years old. Richard McClintock, a
                         Latin professor at Virginia looked up one of the more obscure Latin words, consectetur, from a
                         Lorem Ipsum passage, and going through the cites of the word in classical literature.</p>
@@ -587,7 +588,7 @@
   <script src="assets/js/custom.js"></script>
   <script>
 
-var queryString = decodeURIComponent(window.location.search);
+    var queryString = decodeURIComponent(window.location.search);
     queryString = queryString.substring(1);
     var queries = queryString.split("&");
     var query = queries[0].split("=")
@@ -596,49 +597,49 @@ var queryString = decodeURIComponent(window.location.search);
     window.fbAsyncInit = function () {
       console.log('intiii');
 
-        FB.init({
-            appId: '741927846485476',
-            autoLogAppEvents: true,
-            xfbml: true,
-            version: 'v4.0'
-        });
-        FB.api(
-            '/' + query[1] + '?fields=description,created_time,name,location,cover_photo,picture,likes,comments,count,link',
-            'GET',
-            {},
-            function (response) {
-                console.log('ssss' + JSON.stringify(response));
-                document.getElementById("featured-image").src = 'https://graph.facebook.com/' + response.cover_photo.id + '/picture?type=normal&access_token=' + token;
-                document.getElementById("blog-title").innerHTML = response.name;
-                document.getElementById("breadcomb-blog-title").innerHTML = response.name;
-                document.getElementById("blog-description").innerHTML = response.description;
-                document.getElementById("blog-likes").innerHTML = response.count + " people like this"
+      FB.init({
+        appId: '741927846485476',
+        autoLogAppEvents: true,
+        xfbml: true,
+        version: 'v4.0'
+      });
+      FB.api(
+        '/' + query[1] + '?fields=description,created_time,name,location,cover_photo,picture,likes,comments,count,link',
+        'GET',
+        {},
+        function (response) {
+          console.log('ssss' + JSON.stringify(response));
+          document.getElementById("featured-image").src = 'https://graph.facebook.com/' + response.cover_photo.id + '/picture?type=normal&access_token=' + token;
+          document.getElementById("blog-title").innerHTML = response.name;
+          document.getElementById("breadcomb-blog-title").innerHTML = response.name;
+          document.getElementById("blog-description").innerHTML = response.description;
+          document.getElementById("blog-likes").innerHTML = response.count + " people like this"
+        }
+        , { access_token: token });
+      FB.api(
+        '/' + query[1] + '/comments?fields=created_time,message,id',
+        'GET',
+        {},
+        function (response) {
+          console.log("Response:" + JSON.stringify(Response));
+          document.getElementById("cmt-count1").innerHTML = response.data.length + " Comments";
+          document.getElementById("cmt-count2").innerHTML = response.data.length + " Comments";
+          for (let i = 0; i <= response.data.length; i++) {
+            if (typeof response.data[i] !== "undefined") {
+
             }
-            , {access_token: token});
-        FB.api(
-            '/' + query[1] + '/comments?fields=created_time,message,id',
-            'GET',
-            {},
-            function (response) {
-                console.log("Response:" + JSON.stringify(Response));
-                document.getElementById("cmt-count1").innerHTML = response.data.length + " Comments";
-                document.getElementById("cmt-count2").innerHTML = response.data.length + " Comments";
-                for (let i = 0; i <= response.data.length; i++) {
-                    if (typeof response.data[i] !== "undefined") {
-                        
-                    }
-                }
-                document.getElementById('spinner').remove();
-                document.getElementById('post_container').style.display = 'block';
-                document.getElementById('breadcomb').style.display = 'block';
+          }
+          document.getElementById('spinner').remove();
+          document.getElementById('post_container').style.display = 'block';
+          document.getElementById('breadcomb').style.display = 'block';
 
 
-            }, {access_token: token});
+        }, { access_token: token });
 
     };
 
   </script>
-    <script async defer crossorigin="anonymous" src="https://connect.facebook.net/en_US/sdk.js"></script>
+  <script async defer crossorigin="anonymous" src="https://connect.facebook.net/en_US/sdk.js"></script>
 
 </body>
 
