--- a/about.html
+++ b/about.html
@@ -61,10 +61,10 @@
         <div class="row align-items-center">
           <div class="col-5 col-sm-3 col-md-3 col-lg-2 pr-0">
             <div class="header-logo-area">
-              <a href="index.html">
+              <!-- <a href="index.html">
                 <img class="logo-main" src="assets/img/logo.png" alt="Logo" />
                 <img class="logo-light" src="assets/img/logo.png" alt="Logo" />
-              </a>
+              </a> -->
             </div>
           </div>
           <div class="col-7 col-sm-9 col-md-9 col-lg-10">
@@ -253,7 +253,7 @@
                     </div>
                     <div class="swiper-slide team-member">
                       <div class="thumb">
-                        <img src="assets/img/team/3.jpg" alt="Image">
+                        <img src="assets/img/team/4.jpg" alt="Image">
                         <div class="social-icons">
                           <a href="#"><i class="icofont-facebook"></i></a>
                           <a href="#"><i class="icofont-skype"></i></a>
@@ -269,7 +269,7 @@
                     </div>
                     <div class="swiper-slide team-member">
                       <div class="thumb">
-                        <img src="assets/img/team/3.jpg" alt="Image">
+                        <img src="assets/img/team/5.jpg" alt="Image">
                         <div class="social-icons">
                           <a href="#"><i class="icofont-facebook"></i></a>
                           <a href="#"><i class="icofont-skype"></i></a>
