--- a/committee.html
+++ b/committee.html
@@ -141,115 +141,8 @@
           <div class="row">
             <div class="col-lg-12">
               <div class="team-member-items">
-                <div class="row">
-                  <div class="col-sm-6 col-lg-4">
-                    <div class="team-member">
-                      <div class="thumb">
-                        <img src="assets/img/team/1.jpg" alt="Image">
-                        <div class="social-icons">
-                          <a href="#"><i class="icofont-facebook"></i></a>
-                          <a href="#"><i class="icofont-skype"></i></a>
-                          <a href="#"><i class="icofont-twitter"></i></a>
-                        </div>
-                      </div>
-                      <div class="content">
-                        <div class="member-info">
-                          <h4 class="name"><a href="#/">Leo Baratha Aberathna</a></h4>
-                          <h6 class="designation">President</h6>
-                        </div>
-                      </div>
-                    </div>
-                  </div>
-                  <div class="col-sm-6 col-lg-4">
-                    <div class="team-member">
-                      <div class="thumb">
-                        <img src="assets/img/team/2.jpg" alt="Image">
-                        <div class="social-icons">
-                          <a href="#"><i class="icofont-facebook"></i></a>
-                          <a href="#"><i class="icofont-skype"></i></a>
-                          <a href="#"><i class="icofont-twitter"></i></a>
-                        </div>
-                      </div>
-                      <div class="content">
-                        <div class="member-info">
-                          <h4 class="name"><a href="#/">Leo Kasun Gunathilake</a></h4>
-                          <h6 class="designation">Secretary</h6>
-                        </div>
-                      </div>
-                    </div>
-                  </div>
-                  <div class="col-sm-6 col-lg-4">
-                    <div class="team-member">
-                      <div class="thumb">
-                        <img src="assets/img/team/3.jpg" alt="Image">
-                        <div class="social-icons">
-                          <a href="#"><i class="icofont-facebook"></i></a>
-                          <a href="#"><i class="icofont-skype"></i></a>
-                          <a href="#"><i class="icofont-twitter"></i></a>
-                        </div>
-                      </div>
-                      <div class="content">
-                        <div class="member-info">
-                          <h4 class="name"><a href="#/">Leo Dinuvi Fonseka</a></h4>
-                          <h6 class="designation">Vice President</h6>
-                        </div>
-                      </div>
-                    </div>
-                  </div>
-                  <div class="col-sm-6 col-lg-4">
-                    <div class="team-member">
-                      <div class="thumb">
-                        <img src="assets/img/team/4.jpg" alt="Image">
-                        <div class="social-icons">
-                          <a href="#"><i class="icofont-facebook"></i></a>
-                          <a href="#"><i class="icofont-skype"></i></a>
-                          <a href="#"><i class="icofont-twitter"></i></a>
-                        </div>
-                      </div>
-                      <div class="content">
-                        <div class="member-info">
-                          <h4 class="name"><a href="#/">Leo Dulara Vithana</a></h4>
-                          <h6 class="designation">Assistant Secretary</h6>
-                        </div>
-                      </div>
-                    </div>
-                  </div>
-                  <div class="col-sm-6 col-lg-4">
-                    <div class="team-member">
-                      <div class="thumb">
-                        <img src="assets/img/team/5.jpg" alt="Image">
-                        <div class="social-icons">
-                          <a href="#"><i class="icofont-facebook"></i></a>
-                          <a href="#"><i class="icofont-skype"></i></a>
-                          <a href="#"><i class="icofont-twitter"></i></a>
-                        </div>
-                      </div>
-                      <div class="content">
-                        <div class="member-info">
-                          <h4 class="name"><a href="#/">Leo Buddhi Prameel</a></h4>
-                          <h6 class="designation">Treasurer</h6>
-                        </div>
-                      </div>
-                    </div>
-                  </div>
-                  <div class="col-sm-6 col-lg-4">
-                    <div class="team-member">
-                      <div class="thumb">
-                        <img src="assets/img/team/6.jpg" alt="Image">
-                        <div class="social-icons">
-                          <a href="#"><i class="icofont-facebook"></i></a>
-                          <a href="#"><i class="icofont-skype"></i></a>
-                          <a href="#"><i class="icofont-twitter"></i></a>
-                        </div>
-                      </div>
-                      <div class="content">
-                        <div class="member-info">
-                          <h4 class="name"><a href="#/">Sherika Hankins</a></h4>
-                          <h6 class="designation">Senior Volunteer</h6>
-                        </div>
-                      </div>
-                    </div>
-                  </div>
+                <div class="row" id="club_committee_list">
+                  
                 </div>
               </div>
             </div>
@@ -572,7 +465,113 @@
 
   <!--=== Custom Js ===-->
   <script src="assets/js/custom.js"></script>
+  <script>
+    const userAction = async () => {
+      console.log('hhhh');
+        // document.getElementById('directors-list').style.display = 'none';
+        // document.getElementById('spinner').style.display = 'block';
+        const response = await fetch('https://a1.leos.lk/api/getLeos/club_id=37', {
+            method: 'GET',
+            headers: {
+                'Content-Type': 'application/json'
+            }
+        });
+        console.log('gfgh');
 
+        const clubList = await response.json(); //extract JSON from the http response
+        // do something with myJson
+        var html = '';
+        clubList.forEach(function (item) {
+          console.log('image id ' + item.leo_image);
+          html +='<div class="col-sm-6 col-lg-4">';
+            html +='  <div class="team-member">';
+              html +='  <div class="thumb">';
+                html +='  <img src="'+item.leo_image+'" alt="Image">';
+                html +='<div class="social-icons">';
+                  html +='  <a href="#"><i class="icofont-facebook"></i></a>';
+                  html +='<a href="#"><i class="icofont-skype"></i></a>';
+                  html +='<a href="#"><i class="icofont-twitter"></i></a>';
+                  html +=' </div>';
+                  html +='</div>';
+                  html +='<div class="content">';
+                    html +='<div class="member-info">';
+                      html +='<h4 class="name"><a href="#/">'+item.leo_name+'</a></h4>';
+                      html +='<h6 class="designation">President</h6>';
+                      html +='</div>';
+                      html +='</div>';
+                      html +='</div>';
+                      html +='</div>';
+            // if (item.leo_club_officer_level === "1") {
+
+            //     document.getElementById('president-title').innerText = item.leo_name;
+            //     document.getElementById('president-pic').src = item.leo_image;
+            // }
+            // if (item.leo_designation_if_club_director === 'Immediate Past President') {
+            //     document.getElementById('imd-past-president-name').innerText = item.leo_name;
+            //     document.getElementById('imd-past-president-pic').src = item.leo_image;
+            // }
+        //     if (item.leo_club_officer_level === "2" && item.leo_is_club_officer === '1') {
+        //       console.log('vp is here');
+        //         document.getElementById('vice-president-name').innerText = item.leo_name;
+        //         document.getElementById('vice-president-pic').src = item.leo_image;
+        //     }
+
+        //     if (item.leo_is_club_officer === "2" && item.leo_designation_if_club_director === '2nd Vice President') {
+        //         document.getElementById('2nd-vice-president-name').innerText = item.leo_name;
+        //         document.getElementById('2nd-vice-president-pic').src = item.leo_image;
+        //     }
+
+        //     if (item.leo_club_officer_level === "3" && item.leo_is_club_officer === '1') {
+        //         document.getElementById('secretary-name').innerText = item.leo_name;
+        //         document.getElementById('secretary-pic').src = item.leo_image;
+        //     }
+
+        //     if (item.leo_is_club_officer === "2" && item.leo_designation_if_club_director === 'Assistant Secretary') {
+        //         document.getElementById('asst-secretary-name').innerText = item.leo_name;
+        //         document.getElementById('asst-secretary-pic').src = item.leo_image;
+        //     }
+        //     if (item.leo_is_club_officer === "1" && item.leo_club_officer_level === '4') {
+        //         document.getElementById('treasurer-name').innerText = item.leo_name;
+        //         document.getElementById('treasurer-pic').src = item.leo_image;
+        //     }
+
+        //     if (item.leo_is_club_officer === "2" && item.leo_designation_if_club_director === 'Assistant Treasurer') {
+        //         document.getElementById('asst-treasurer-name').innerText = item.leo_name;
+        //         document.getElementById('asst-treasurer-pic').src = item.leo_image;
+        //     }
+
+        //     if (item.leo_is_club_officer === "2" && item.leo_club_officer_level === '0') {
+        //         document.getElementById('directors-list').innerHTML = document.getElementById('directors-list').innerHTML +
+        //             '<div class="team-block col-lg-4 col-md-6 col-sm-12">\n' +
+        //             '                    <div class="inner-box wow fadeInLeft" data-wow-delay="0ms" data-wow-duration="1500ms">\n' +
+        //             '                        <ul class="social-icons">\n' +
+        //             '                            <li><a href="#"><i class="fab fa-facebook-f"></i></a></li>\n' +
+        //             '                            <li><a href="#"><i class="fab fa-twitter"></i></a></li>\n' +
+        //             '                            <li><a href="#"><i class="fab fa-skype"></i></a></li>\n' +
+        //             '\n' +
+        //             '                            <li><a href="#"><i class="fab fa-linkedin-in"></i></a></li>\n' +
+        //             '                        </ul>\n' +
+        //             '                        <div class="image">\n' +
+        //             '                            <a href="#"><img src="' + item.leo_image + '" alt=""/></a>\n' +
+        //             '                        </div>\n' +
+        //             '                        <div class="lower-content">\n' +
+        //             '                            <h3><a href="#">' + item.leo_name + '</a></h3>\n' +
+        //             '                            <div class="designation">' + item.leo_designation_if_club_director + '</div>\n' +
+        //             '                        </div>\n' +
+        //             '                    </div>\n' +
+        //             '                </div>';
+        //     }
+        });
+        $('#club_committee_list').empty().append(html);
+
+        // document.getElementById('directors-list').style.display = 'flex';
+        // document.getElementById('spinner').classList.remove("d-flex");
+        // document.getElementById('spinner').style.display = 'none';
+        // console.log("CLUB:" + JSON.stringify(myJson));
+    }
+
+    userAction();
+    </script>
 </body>
 
 </html>
