colors changed and add projects to project page

--- a/blog-details.html
+++ b/blog-details.html
@@ -9,7 +9,7 @@
   <title>Projects - Leo club of Moratuwa - Ratmalana</title>
 
   <!--== Favicon ==-->
-  <link rel="shortcut icon" href="assets/img/favicon.ico" type="image/x-icon" />
+  <link rel="shortcut icon" href="assets/img/favicon.png" type="image/x-icon" />
 
   <!--== Google Fonts ==-->
   <link href="https://fonts.googleapis.com/css?family=Yeseva+One:400" rel="stylesheet">
@@ -71,8 +71,8 @@
               <div class="header-navigation-area">
                 <ul class="main-menu nav justify-content-center">
                   <li><a href="index.html">Home</a></li>
-                  <li class="active"><a href="about.html">About Us</a></li>
-                  <li class="has-submenu"><a href="projects.html">Projects</a>
+                  <li ><a href="about.html">About Us</a></li>
+                  <li class="has-submenu active"><a href="projects.html">Projects</a>
                     <ul class="submenu-nav">
                       <li><a href="projects.html">Projects</a></li>
                       <li><a href="project-details.html">Project Details</a></li>
