--- a/project-details.html
+++ b/project-details.html
@@ -9,7 +9,7 @@
   <title>Causes Details – Givest – Non Profit Bootstrap 5 HTML Template</title>
 
   <!--== Favicon ==-->
-  <link rel="shortcut icon" href="assets/img/favicon.ico" type="image/x-icon" />
+  <link rel="shortcut icon" href="assets/img/favicon.png" type="image/x-icon" />
 
   <!--== Google Fonts ==-->
   <link href="https://fonts.googleapis.com/css?family=Yeseva+One:400" rel="stylesheet">
