--- a/committee.html
+++ b/committee.html
@@ -9,7 +9,7 @@
   <title>Become Volunteer – Givest – Non Profit Bootstrap 5 HTML Template</title>
 
   <!--== Favicon ==-->
-  <link rel="shortcut icon" href="assets/img/favicon.ico" type="image/x-icon" />
+  <link rel="shortcut icon" href="assets/img/favicon.png" type="image/x-icon" />
 
   <!--== Google Fonts ==-->
   <link href="https://fonts.googleapis.com/css?family=Yeseva+One:400" rel="stylesheet">
@@ -60,10 +60,10 @@
         <div class="row align-items-center">
           <div class="col-5 col-sm-3 col-md-3 col-lg-2 pr-0">
             <div class="header-logo-area">
-              <!-- <a href="index.html">
+              <a href="index.html">
                 <img class="logo-main" src="assets/img/logo.png" alt="Logo" />
                 <img class="logo-light" src="assets/img/logo.png" alt="Logo" />
-              </a> -->
+              </a>
             </div>
           </div>
           <div class="col-7 col-sm-9 col-md-9 col-lg-10">
