--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <title>MRLeos – Leo Club of Moratuwa Rathmalana</title>
 
   <!--== Favicon ==-->
-  <link rel="shortcut icon" href="assets/img/favicon.ico" type="image/x-icon" />
+  <link rel="shortcut icon" href="assets/img/favicon.png" type="image/x-icon" />
 
   <!--== Google Fonts ==-->
   <link href="https://fonts.googleapis.com/css?family=Yeseva+One:400" rel="stylesheet">
@@ -60,10 +60,10 @@
         <div class="row align-items-center">
           <div class="col-5 col-sm-3 col-md-3 col-lg-2 pr-0">
             <div class="header-logo-area">
-              <!-- <a href="index.html">
+              <a href="index.html">
                 <img class="logo-main" src="assets/img/logo.png" alt="Logo" />
                 <img class="logo-light" src="assets/img/logo.png" alt="Logo" />
-              </a> -->
+              </a>
             </div>
           </div>
           <div class="col-7 col-sm-9 col-md-9 col-lg-10">
@@ -547,77 +547,8 @@
       </section>
       <!--== End Events Area ==-->
 
-      <!--== Start Testimonial Area ==-->
-      <section class="testimonial-area testimonial-default-area bgcolor-theme3">
-        <div class="container">
-          <div class="row">
-            <div class="col-md-12 col-lg-4 col-xl-5">
-              <div class="title-wrp" data-bg-img="assets/img/testimonial/bg-testi1.jpg" data-aos="fade-right"
-                data-aos-duration="1000">
-                <div class="section-title">
-                  <h5 class="subtitle line-white-color text-white mb-7">Recent Events</h5>
-                  <h2 class="title title-style text-white">What People Say About Us. <img class="img-shape"
-                      src="assets/img/shape/3.png" alt="Image-Givest"></h2>
-                </div>
-              </div>
-            </div>
-            <div class="col-md-12 col-lg-7 col-xl-6">
-              <div class="testimonial-content" data-aos="fade-up" data-aos-duration="1000">
-                <div class="testimonial-slider-content">
-                  <div class="swiper-container testimonial-slider-container">
-                    <div class="swiper-wrapper testimonial-slider">
-                      <div class="swiper-slide testimonial-single">
-                        <div class="client-thumb-wrp">
-                          <div class="client-thumb">
-                            <img src="assets/img/testimonial/1.png" alt="Image-Givest">
-                          </div>
-                          <div class="quote-icon">“</div>
-                        </div>
-                        <div class="client-content">
-                          <p>The leap into electronic typesetting, essentially unchanged was popularised the release
-                            Letraset sheets containing and more recently desktop publishing like Aldus maker including.
-                          </p>
-                        </div>
-                        <div class="client-info">
-                          <img class="shape-line-img" src="assets/img/shape/line-t1.png" alt="Image-Givest">
-                          <h4 class="name">Harvey Harrington</h4>
-                          <h6 class="designation">Senior Volunteer</h6>
-                        </div>
-                      </div>
-                      <div class="swiper-slide testimonial-single">
-                        <div class="client-thumb-wrp">
-                          <div class="client-thumb">
-                            <img src="assets/img/testimonial/2.png" alt="Image-Givest">
-                          </div>
-                          <div class="quote-icon">“</div>
-                        </div>
-                        <div class="client-content">
-                          <p>It is long established fact that reader will distract by the readable content a page when
-                            looking atten layout. The point of using and that it has a normal distribution of letters
-                          </p>
-                        </div>
-                        <div class="client-info">
-                          <img class="shape-line-img" src="assets/img/shape/line-t1.png" alt="Image-Givest">
-                          <h4 class="name">Julia Steve</h4>
-                          <h6 class="designation">Senior Volunteer</h6>
-                        </div>
-                      </div>
-                    </div>
-                    <!-- Add Arrows -->
-                    <div class="navigation-wrp">
-                      <div class="swiper-button-prev"><img class="icon-img" src="assets/img/icons/test-arrow-left.png"
-                          alt="Image-Icon"></div>
-                      <div class="swiper-button-next"><img class="icon-img" src="assets/img/icons/test-arrow-right.png"
-                          alt="Image-Icon"></div>
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-      </section>
-      <!--== End Testimonial Area ==-->
+     
+      
 
       <!--== Start Blog Area Wrapper ==-->
       <!-- <section class="blog-area blog-default-area">
@@ -640,7 +571,7 @@
       <!--== End Blog Area Wrapper ==-->
 
       <!--== Start Brand Logo Area ==-->
-      <section class="brand-logo-area brand-logo-default-area">
+      <!-- <section class="brand-logo-area brand-logo-default-area">
         <div class="container">
           <div class="row" data-aos="fade-up" data-aos-duration="1000">
             <div class="col-sm-8 offset-sm-2 col-md-8 offset-md-2 col-lg-4 offset-lg-0 col-xl-4">
@@ -707,7 +638,7 @@
             </div>
           </div>
         </div>
-      </section>
+      </section> -->
       <!--== End Brand Logo Area ==-->
     </main>
 
@@ -816,8 +747,8 @@
             <div class="row align-items-center">
               <div class="col-12">
                 <div class="widget-copyright text-center">
-                  <p>© 2025 <span>Givest</span>. Made with <i class="icon_heart"></i> by <a target="_blank"
-                      href="https://www.hasthemes.com">HasThemes</a></p>
+                  <p>copyright © 2021 <span>leos.moratuwaratmalana</span> by <a target="_blank"
+                      href="https://www.leos.moratuwaratmalana.lk">IT crew</a></p>
                 </div>
               </div>
             </div>
