--- a/projects.html
+++ b/projects.html
@@ -6,10 +6,10 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-  <title>Causes – Givest – Non Profit Bootstrap 5 HTML Template</title>
+  <title>Projects – MRLeos</title>
 
   <!--== Favicon ==-->
-  <link rel="shortcut icon" href="assets/img/favicon.ico" type="image/x-icon" />
+  <link rel="shortcut icon" href="assets/img/favicon.png" type="image/x-icon" />
 
   <!--== Google Fonts ==-->
   <link href="https://fonts.googleapis.com/css?family=Yeseva+One:400" rel="stylesheet">
@@ -116,9 +116,9 @@
           <div class="row">
             <div class="col-lg-12">
               <div class="page-title-content text-center">
-                <h2 class="title text-white">Causes</h2>
+                <h2 class="title text-white">Projects</h2>
                 <div class="bread-crumbs"><a href="index.html">Home<span class="breadcrumb-sep">//</span></a><span
-                    class="active">Causes</span></div>
+                    class="active">Projects</span></div>
               </div>
             </div>
           </div>
@@ -128,6 +128,25 @@
 
       <!--== Start Causes Area ==-->
       <section class="causes-area causes-default-area">
+        <div class="container">
+          <div class="row">
+            <div class="col-lg-8 m-auto">
+              <div class="section-title text-center" data-aos="fade-up" data-aos-duration="1000">
+                <h5 class="subtitle line-theme-color">Our Journey</h5>
+                <h2 class="title title-style">Our experience can change your life <img class="img-shape"
+                    src="assets/img/shape/3.png" alt="Image-Givest"></h2>
+              </div>
+            </div>
+          </div>
+          <div class="row" data-aos="fade-up" data-aos-duration="1000" id="blog_post_list">
+      
+          </div>
+        </div>
+      </section>
+      <!--== End Causes Area ==-->
+
+      <!--== Start Causes Area ==-->
+      <!-- <section class="causes-area causes-default-area">
         <div class="container">
           <div class="row">
             <div class="col-md-6 col-lg-4">
@@ -342,7 +361,7 @@
             </div>
           </div>
         </div>
-      </section>
+      </section> -->
       <!--== End Causes Area ==-->
 
       <!--== Start Funfact Area ==-->
@@ -730,6 +749,98 @@
 
   <!--=== Custom Js ===-->
   <script src="assets/js/custom.js"></script>
+  <script>
+
+    var token = "EAAKix4m9HeQBAEC5PQKyTZBm0PVzO9x92WObzlDMwlQ50IpMjQNDJlsf06KXNemwowp0mHZBdIyMh94TC8DbYpT8JemcOKjbOHxHP4fO7U3cq7ZClmI17s2DjJCVGPfOZAsAMMTh9ONr92SpJ1OnOkR3RDlatCXWg5KY1SNMTRcaACMoFKZB3";
+    window.fbAsyncInit = function () {
+      FB.init({
+        appId: '741927846485476',
+        autoLogAppEvents: true,
+        xfbml: true,
+        version: 'v4.0'
+      });
+      FB.api(
+        '/leoclubofmoratuwarathmalana/albums?fields=description,picture.height(2048),created_time,name,comments,count,cover_photo,likes',
+        'GET',
+        {},
+        function (response) {
+
+          var count = Object.keys(response.data).length;
+          console.log(count);
+          var html = '';
+          for (let i = 0; i <= 6; i++) {
+            var AlbumDescription = response.data[i].description;
+
+            if (AlbumDescription.includes("Summary")) {
+              //Get summary
+              var projectSummaryTemp = AlbumDescription.split('|')[0];
+              var projectSummary = projectSummaryTemp.split(':')[1];
+              console.log('summaryTemp' + projectSummary);
+              //Get Project Date
+              var projectDateTemp = AlbumDescription.split('|')[2];
+              var projectDate = projectDateTemp.split(':')[1];
+              var projectYear = projectDate.split('/')[2];
+              var projectMonth = projectDate.split('/')[1];
+              console.log('Date is' + projectMonth);
+              //
+            }
+
+            if (response.data[i].name === 'Cover Photos' || response.data[i].name === 'Mobile Uploads' || response.data[i].name === 'Timeline Photos' || response.data[i].name === 'Profile Pictures') {
+              console.log('here we are');
+            } else {
+              if (projectDateTemp === "") {
+                var datee = response.data[i].created_time;
+                var albumYear = datee.split('-')[0];
+                var albumMonth = datee.split('-')[1];
+                var albumDayTime = datee.split('-',)[2];
+                var albumDay = albumDayTime.split('T')[0];
+                var albumDate = albumYear + '/' + albumMonth + '/' + albumDay;
+                console.log('ccc' + albumDate);
+              }
+
+
+              html += '<div class="col-md-6 col-lg-4">';
+              html += '<div class="causes-item mb-md-30">';
+              html += '<div class="thumb">';
+              html += '<img src="https://graph.facebook.com/' + response.data[i].cover_photo.id + '/picture?type=normal&access_token=' + token + '" alt="demo">';
+              html += '</div>';
+              html += '  <div class="content">';
+              html += '    <ul class="donate-info">';
+              html += '     <li class="info-item">';
+              html += '       <span class="info-title">Year:</span>';
+              html += '       <span class="amount">' + projectYear + '</span>';
+              html += '     </li>';
+              html += '     <li class="info-item">';
+              html += '    <span class="info-title">Month:</span>';
+              html += '    <span class="amount">' + projectMonth + '</span>';
+              html += '  </li>';
+              html += '  <li class="info-item">';
+              html += '    <span class="info-title">Participants:</span>';
+              html += '    <span class="amount">' + response.data[i].count + '</span>';
+              html += '  </li>';
+              html += '</ul>';
+              html += '<h4 class="title"><a href="blog-details.html?id=' + response.data[i].id + '">' + response.data[i].name + '</a>';
+              html += '</h4>';
+              html += ' <p>' + projectSummary.substr(0, 200) + '...</p >';
+              html += '</div>';
+              html += '<div class="causes-footer">';
+              html += ' <div class="admin">';
+              html += '</div>';
+              html += '     <a class="btn-theme btn-border-gradient gray-border btn-size-md" href="blog-details.html?id=' + response.data[i].id + '""><span>Read Now <img';
+              html += '       class="icon icon-img" src="assets/img/icons/arrow-line-right-gradient.png"';
+              html += '       alt="Icon"></span></a>';
+              html += ' </div>';
+              html += '    </div>';
+              html += '  </div>';
+              $('#blog_post_list').empty().append(html);
+            }
+
+          }
+        }
+        , { access_token: token });
+    };
+  </script>
+  <script async defer crossorigin="anonymous" src="https://connect.facebook.net/en_US/sdk.js"></script>
 
 </body>
 
