--- a/about.html
+++ b/about.html
@@ -55,60 +55,45 @@
     </div>
     <!--== End Preloader Content ==-->
 
-    <!--== Start Header Wrapper ==-->
-    <header class="header-area header-default sticky-header">
-      <div class="container">
-        <div class="row align-items-center">
-          <div class="col-5 col-sm-3 col-md-3 col-lg-2 pr-0">
-            <div class="header-logo-area">
-              <a href="index.html">
-                <img class="logo-main" src="assets/img/logo.png" alt="Logo" />
-                <img class="logo-light" src="assets/img/logo.png" alt="Logo" />
-              </a>
-            </div>
+<!--== Start Header Wrapper ==-->
+<header class="header-area header-default sticky-header">
+  <div class="container">
+    <div class="row align-items-center">
+      <div class="col-5 col-sm-3 col-md-3 col-lg-2 pr-0">
+        <div class="header-logo-area">
+          <a href="index.html">
+            <img class="logo-main" src="assets/img/logo.png" alt="Logo" />
+            <img class="logo-light" src="assets/img/logo.png" alt="Logo" />
+          </a>
+        </div>
+      </div>
+      <div class="col-7 col-sm-9 col-md-9 col-lg-10">
+        <div class="header-align">
+          <div class="header-navigation-area">
+            <ul class="main-menu nav justify-content-center">
+              <li ><a href="index.html">Home</a></li>
+              <li class="active"><a href="about.html">About Us</a></li>
+              <li><a href="projects.html">Projects</a></li>
+              <li><a href="event-details.html">Events</a></li>
+              <li><a href="committee.html">Committee</a>
+              <li><a href="contact.html">Contact Us</a></li>
+            </ul>
           </div>
-          <div class="col-7 col-sm-9 col-md-9 col-lg-10">
-            <div class="header-align">
-              <div class="header-navigation-area">
-                <ul class="main-menu nav justify-content-center">
-                  <li><a href="index.html">Home</a></li>
-                  <li class="active"><a href="about.html">About Us</a></li>
-                  <li class="has-submenu"><a href="projects.html">Projects</a>
-                    <ul class="submenu-nav">
-                      <li><a href="projects.html">Projects</a></li>
-                      <li><a href="project-details.html">Project Details</a></li>
-                    </ul>
-                  </li>
-                  <li class="has-submenu"><a href="blog.html">Blog</a>
-                    <ul class="submenu-nav">
-                      <li><a href="blog.html">Blog Grid</a></li>
-                      <li><a href="blog-details.html">Blog Single</a></li>
-                    </ul>
-                  </li>
-                  <li class="has-submenu"><a href="committee.html">Committee</a>
-                    <ul class="submenu-nav">
-                      <li><a href="event-details.html">Event Details</a></li>
-                      <li><a href="committee.html">Committee</a></li>
-                    </ul>
-                  </li>
-                  <li><a href="contact.html">Contact Us</a></li>
-                </ul>
-              </div>
-              <div class="header-action-area">
-                <button class="btn-menu d-xl-none">
-                  <span></span>
-                  <span></span>
-                  <span></span>
-                </button>
-                <a href="application.html" class="btn-theme btn-gradient btn-slide">Join Now <img class="icon icon-img"
-                    src="assets/img/icons/arrow-line-right2.png" alt="Icon"></a>
-              </div>
-            </div>
+          <div class="header-action-area">
+            <button class="btn-menu d-xl-none">
+              <span></span>
+              <span></span>
+              <span></span>
+            </button>
+            <a href="application.html" class="btn-theme btn-gradient btn-slide">Join Now <img class="icon icon-img"
+                src="assets/img/icons/arrow-line-right2.png" alt="Icon"></a>
           </div>
         </div>
       </div>
-    </header>
-    <!--== End Header Wrapper ==-->
+    </div>
+  </div>
+</header>
+<!--== End Header Wrapper ==-->
 
     <main class="main-content site-wrapper-reveal">
       <!--== Start Page Title Area ==-->
