--- a/project-details.html
+++ b/project-details.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-  <title>Causes Details – Givest – Non Profit Bootstrap 5 HTML Template</title>
+  <title>Project Details – MRLeos</title>
 
   <!--== Favicon ==-->
   <link rel="shortcut icon" href="assets/img/favicon.png" type="image/x-icon" />
@@ -71,25 +71,10 @@
               <div class="header-navigation-area">
                 <ul class="main-menu nav justify-content-center">
                   <li><a href="index.html">Home</a></li>
-                  <li class="active"><a href="about.html">About Us</a></li>
-                  <li class="has-submenu"><a href="projects.html">Projects</a>
-                    <ul class="submenu-nav">
-                      <li><a href="projects.html">Projects</a></li>
-                      <li><a href="project-details.html">Project Details</a></li>
-                    </ul>
-                  </li>
-                  <li class="has-submenu"><a href="blog.html">Blog</a>
-                    <ul class="submenu-nav">
-                      <li><a href="blog.html">Blog Grid</a></li>
-                      <li><a href="blog-details.html">Blog Single</a></li>
-                    </ul>
-                  </li>
-                  <li class="has-submenu"><a href="committee.html">Committee</a>
-                    <ul class="submenu-nav">
-                      <li><a href="event-details.html">Event Details</a></li>
-                      <li><a href="committee.html">Committee</a></li>
-                    </ul>
-                  </li>
+                  <li ><a href="about.html">About Us</a></li>
+                  <li class="active"><a href="projects.html">Projects</a></li>
+                  <li><a href="event-details.html">Events</a></li>
+                  <li><a href="committee.html">Committee</a>
                   <li><a href="contact.html">Contact Us</a></li>
                 </ul>
               </div>
@@ -106,9 +91,8 @@
           </div>
         </div>
       </div>
-  </div>
-  </header>
-  <!--== End Header Wrapper ==-->
+    </header>
+    <!--== End Header Wrapper ==-->
 
   <main class="main-content site-wrapper-reveal">
     <!--== Start Page Title Area ==-->
